<resources>
    <string name="app_name">au543236 Jobs</string>

    <string name="activityListTextView">My Jobs</string>
    <string name="ExitButton">Exit</string>
    <string name="TextViewCompany">Company Name</string>
    <string name="TextViewScore" translatable="false">5.5</string>
    <string name="TextViewJobtitle">Job Title</string>
    <string name="TextViewDescription">Job Description</string>
    <string name="EditTextDescription">JobDescriptionField</string>
    <string name="TextViewNotes">Notes</string>
    <string name="EditTextNotes">"Notes go here: "</string>
    <string name="TextViewStatus" translatable="false">Status:</string>
    <string name="TextViewStatusResult">Not Applied</string>
    <string name="OK_Button">OK</string>
    <string name="TextViewLocation">Location</string>
    <string name="activityNotesCheckBox">Applied</string>
    <string name="PREV_SESSION_JOB_LIST" translatable="false">OBJECTS</string>
    <string name="contentDescriptorImage" translatable="false">logo</string>
    <string name="saveBtn">Save</string>
    <string name="setCoolnessScoreText">Set your Coolness Score:</string>
    <string name="setNotesPrependText">Notes:</string>
    <string name="jobStatusTextApplied">Status: Applied</string>
    <string name="jobStatusTextNotApplied">Status: Not Applied</string>
    <string name="starred">starred</string>
    <string name="btnTextUpdate">Update</string>
    <string name="searchBar">Input search terms</string>
    <string name="searchBarText">Search Text</string>
    <string name="btnRemove">Remove</string>
    <string name="coolnessScore">Coolness Score:</string>
    <string name="contentDescriptionImageBtn">Favorited</string>
    <string name="broadcastRXNotificationString">com.ex.NOTIFY</string>
    <string name="jobNotificationText">JOB NOTIFICATION</string>
    <string name="jobsNotFound">No jobs found</string>
    <string name="noNetworkConnection">No internet connection</string>
    <string name="jobServiceChannel">Job service Channel</string>
    <string name="notificationTitle">Job service is running</string>
    <string name="notificationText">Check back later for jobs</string>
    <string name="jobRmFavouriteAndList">Job removed Favourites and from List</string>
    <string name="jobRmFromList">Job removed from List</string>
    <string name="jobUpdated">Job has been Updated</string>
    <string name="jobRmFromFavourites">Job has been removef From Favourites</string>
    <string name="tempSaved">Job has been temporily saved</string>
    <string name="jobAddedToFavourites">Job added to Favourites</string>
    <string name="searchForJob">Job Search:</string>
    <string name="searchingForJobs">Searching for matching jobs</string>
    <string name="searchingForJobsNoString">Searching for jobs</string>
    <string name="jobListSaved">Job list saved</string>
    <string name="jobSaved">Job saved</string>



</resources>