<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="116dp"
    android:background="@color/colorPrimary"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingTop="2dp"
    android:paddingBottom="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/jobListElementLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/contentDescriptorImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/jobListElementTextViewCoolnessScore"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/TextViewScore"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/favoritedMark"
            app:layout_constraintStart_toStartOf="@+id/favoritedMark"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/jobListElementTextViewApplied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/TextViewStatusResult"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toEndOf="@+id/jobListElementLogo"
            app:layout_constraintTop_toBottomOf="@+id/jobListElementTextViewJobTitle" />

        <TextView
            android:id="@+id/jobListElementTextViewJobTitle"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/TextViewJobtitle"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toEndOf="@+id/jobListElementLogo"
            app:layout_constraintTop_toBottomOf="@+id/jobListElementTextViewCompany" />

        <TextView
            android:id="@+id/jobListElementTextViewCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/TextViewCompany"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/jobListElementLogo"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/favoritedMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:button="@drawable/checkbox_selector"
            android:clickable="false"
            android:focusable="false"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jobListElementTextViewCoolnessScore" />

        <View
            android:id="@+id/divider19"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>